--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,3 +15,14 @@ code {
 .footer-logo {
   width: 3rem;
 }
+
+
+.app {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+main {
+  flex-grow: 1;
+}
